    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{as.numeric()}, \code{scan()}, \code{type.convert()}
      and other places which use the internal C function \code{R_strtod} now
      require a \emph{non-empty} digit sequence in a decimal or binary
      exponent.  This aligns with the C/POSIX standard for \code{strtod} and
      with \code{?NumericConstants}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item Startup banners, \command{R --version}, \code{sessionInfo()}
      and \command{R CMD check} no longer report \code{(64-bit)} as part of
      the platform as this is almost universal -- the increasingly rare
      32-bit platforms will still report \code{(32-bit)}.

      On Windows, ditto for window titles.

      \item \code{is.atomic(NULL)} now returns \code{FALSE}, as \code{NULL}
      is not an atomic vector.  Strict back-compatibility would
      replace \code{is.atomic(foo)} by \code{(is.null(foo) || is.atomic(foo))}
      but should happen only sparingly.
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{confint()} methods for \code{"glm"} and
      \code{"nls"} objects have been copied to the \pkg{stats}
      package.  Previously, they were stubs which called versions in
      package \pkg{MASS}. The \pkg{MASS} namespace is no longer loaded
      if you invoke (say) \code{confint(glmfit)}.  Further, the
      \code{"glm"} method for \code{profile()} and the \code{plot()}
      and \code{pairs()} methods for class \code{"profile"} have been
      copied from \pkg{MASS} to \pkg{stats}.  (\code{profile.nls()} and
      \code{plot.profile.nls()} were already in \code{stats}.)

      \item The \code{confint()} and \code{profile} methods for
      \code{"glm"} objects have gained a possibility to do profiling
      based on the \I{Rao} Score statistic in addition to the default